# portal-software

./: .gitignore  Cargo.toml  README.md  flake.nix  openocd.cfg  shell.nix
.cargo/: config
.github/workflows/: ci.yml  docker.yml
docker/: embedded-dev.nix  emulator.nix
dummy-uniffi/: Cargo.toml
dummy-uniffi/src/: lib.rs
emulator/: Cargo.toml  README.md  build.rs  default.nix  gui.fl  report.hb
emulator/nt3h-emulator/: Cargo.toml
emulator/nt3h-emulator/src/: lib.rs
emulator/src/: gui.rs  lib.rs  link.rs
emulator/src/tests/: bitcoin.rs  fast_boot.rs  init.rs  mod.rs  set_descriptor.rs
emulator/src/utils/: flash.rs  mod.rs  model.rs  report.rs
emulator/ssd1306-emulator/: Cargo.toml
emulator/ssd1306-emulator/src/: lib.rs
fetch-git-hash/: Cargo.toml
fetch-git-hash/src/: lib.rs
firmware/: .gdbinit  Cargo.toml  README.md  build.rs  default.nix
firmware/.cargo/: config
firmware/gdb-scripts/: change-bank.gdb  enable-dualbank.gdb  erase-config.gdb  erase-device.gdb  erase-first-page-b1.gdb  mer2.gdb
firmware/linker-scripts/device/: memory.x
firmware/linker-scripts/emulator/: memory.x
firmware/scripts/: rtt.sh  sign.sh
firmware/src/: checkpoint.rs  config.rs  error.rs  hw_common.rs  main.rs  version.rs
firmware/src/emulator/: config.rs  flash.rs  hw.rs  mod.rs
firmware/src/handlers/: bitcoin.rs  debug.rs  fwupdate.rs  idle.rs  init.rs  mod.rs
firmware/src/hw/: mod.rs  nt3h.rs  tsc.rs
functional-test-wrapper/: Cargo.toml
functional-test-wrapper/src/: lib.rs
gui/: Cargo.toml  default.nix
gui/src/: lib.rs
model/: Cargo.toml  default.nix
model/src/: emulator.rs  encryption.rs  lib.rs  reg.rs  write_buffer.rs
portal-model/: Cargo.toml  default.nix
portal-model/src/: encryption.rs  lib.rs  reg.rs  write_buffer.rs
sdk/: Cargo.toml  README.md  default.nix  uniffi.toml
sdk/libportal-android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
sdk/libportal-android/lib/: build.gradle.kts  proguard-rules.pro
sdk/libportal-android/lib/src/main/: .gitignore  AndroidManifest.xml
sdk/libportal-android/plugins/: README.md  build.gradle.kts
sdk/libportal-android/plugins/src/main/kotlin/xyz/twenty_two/plugins/: UniFfiAndroidPlugin.kt
sdk/libportal-ios/: build-local-swift.sh  libportal-ios.podspec
sdk/libportal-ios/portalFFI.xcframework/: Info.plist
sdk/libportal-ios/portalFFI.xcframework/ios-arm64/portalFFI.framework/Headers/: portalFFI-umbrella.h
sdk/libportal-ios/portalFFI.xcframework/ios-arm64/portalFFI.framework/Modules/: module.modulemap
sdk/libportal-react-native/android/: build.gradle
sdk/libportal-react-native/android/src/main/java/xyz/twenty_two/react_native/: LibportalReactNativeModule.kt
sdk/libportal-react-native/example/android/: build.gradle
sdk/libportal-react-native/example/src/: App.tsx
sdk/libportal-react-native/ios/: LibportalReactNative.mm  LibportalReactNative.swift
sdk/libportal-react-native/src/: index.tsx
sdk/src/: inner_logic.rs  lib.rs  psbt.rs
