[package]
name = "model"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minicbor = { version = "0.20", default-features = false, features = ["derive", "alloc"] }
modular-bitfield = "0.11.2"
bitcoin = { version = "0.29.2", default-features = false, features = ["no-std", "serde"] }
bip39 = { version = "1.2.0", default-features = false }
noise-protocol = { version = "0.1.4", default-features = false, features = ["use_alloc"] }
noise-rust-crypto = { version = "0.5.0", default-features = false, features = ["use-aes-256-gcm"] }
aes-gcm = { version = "0.9.4" }
log = "0.4"

serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
serde_json = { version = "1.0", default-features = false, features = ["alloc"], optional = true }

[features]
stm32 = []
emulator = ["serde_json", "serde"]
emulator-std = ["emulator", "minicbor/std"]